--- a/templates/home.html
+++ b/templates/home.html
@@ -6647,9 +6647,8 @@ function closeOutOfCreditsModal() {
     document.body.style.overflow = 'auto';
 }
 
-// Go to pricing page
 function goToPricing() {
-    window.location.href = '/pricing';
+    window.open('/pricing', '_blank');
 }
 
 // Close on overlay click
