--- a/templates/home.html
+++ b/templates/home.html
@@ -4418,9 +4418,10 @@
         
         <nav class="site-nav">
 <!--             <a href="/remove-background">Features</a>
- -->            <a href="/remove-background">Background Remover</a>
-             <a href="https://chatezzy.com">Multi AI Chat</a>
-            <a href="/pricing">Pricing</a>
+ -->            <a href="/remove-background" target="_blank">Background Remover</a>
+                <a href="https://chatezzy.com" target="_blank">Multi AI Chat</a>
+                <a href="/pricing" target="_blank">Pricing</a>
+
             <button id="bugReportBtn" class="bug-report-trigger">Report Bug</button>
 
             <div class="user-profile">
