--- a/templates/support.html
+++ b/templates/support.html
@@ -182,6 +182,16 @@
             
             <p>Please include as much detail as possible in your message to help us provide you with the most accurate assistance.</p>
 
+              <h2>Legal Entity Details</h2>
+  <p>
+    <strong>Company Name:</strong> AIN-HUB Private Limited<br>
+    <strong>CIN:</strong> U62091TS2024PTC191451<br>
+    <strong>GSTIN:</strong> 36ABBCA7282K1ZD<br>
+    <strong>PAN:</strong> ABBCA7282K<br>
+    <strong>TAN:</strong> VPNA09489E<br>
+    <strong>DIN:</strong> 10852956<br>
+    <strong>Business Address:</strong> Uttam Padmavathi Nagar, Huzurnagar, Suryapet - 508204, Telangana, India
+  </p>
            
         </div>
  
