--- a/templates/home.html
+++ b/templates/home.html
@@ -5714,6 +5714,9 @@ function showLoadingState() {
             <div style="width: 100%; max-width: 400px;">
                 <div class="loading-shimmer">
                     <div class="low-credit-loading-warning-full">
+                    <div class="loading-text">
+                    <span class="loading-dots">Generating your image</span>
+                </div>
                         <div class="warning-spinner"></div>
                         <div class="warning-text">
                             <strong>Free limit - Takes longer</strong>
