--- a/templates/home.html
+++ b/templates/home.html
@@ -5259,7 +5259,8 @@
                 <div class="footer-section">
                     <h3>Company</h3>
                     <ul class="footer-links">
-                        <li><a href="#">About Nano Banana</a></li>
+                        <li><a href="https://googlenanobanana.com/support">Support</a></li>
+                        <li><a href="https://googlenanobanana.com/support">About Us</a></li>
                         <li><a href="#">Careers</a></li>
                         <li><a href="#">Press & Media</a></li>
                         <li><a href="#">Contact Sales</a></li>
